--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,63 @@
 @import 'tailwindcss';
 
+/* ==== Fonts ==== */
+
+/* Karaoke */
+@font-face {
+  font-family: 'Karaoke';
+  src: url('./assets/fonts/LT_karaoke/LTKaraoke-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Karaoke';
+  src: url('./assets/fonts/LT_karaoke/LTKaraoke-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Karaoke';
+  src: url('./assets/fonts/LT_karaoke/LTKaraoke-Regular.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Karaoke';
+  src: url('./assets/fonts/LT_karaoke/LTKaraoke-SemiBold.ttf')
+    format('truetype');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Karaoke';
+  src: url('./assets/fonts/LT_karaoke/LTKaraoke-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Raveo */
+@font-face {
+  font-family: 'Raveo';
+  src:
+    url('./assets/fonts/raveo/fonts/variable/RaveoVF.ttf') format('truetype'),
+    url('./assets/fonts/raveo/fonts/variable/RaveoVF.woff2') format('woff2'),
+    url('./assets/fonts/raveo/fonts/variable/RaveoVF-subsetted.woff2')
+      format('woff2');
+  font-style: normal;
+  font-display: swap;
+}
+
+/* ==== Theme ==== */
+
 @theme {
   --color-primary: #6200ee;
   --color-primary-400: #7616ff;
@@ -19,7 +77,7 @@
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Raveo', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
